Feat(Added EbonySnapsManager)

--- a/src/Flagrum.Application/Features/Information/About.razor
+++ b/src/Flagrum.Application/Features/Information/About.razor
@@ -64,6 +64,7 @@
             @Localizer["Alex Cup"]<br/>
             @Localizer["Rinual"]<br/>
             @Localizer["Yretenai"]<br/>
+            @Localizer["Surihix"]<br/>
             @Localizer["AsteriskAmpersand"]<br/>
             @Localizer["Katelynn Kittaly"]<br/>
             @Localizer["ImpatientTraveler"]<br/>
