fix(tutorial link window)
Opens the link in a new tab or window rather than within the app.

--- a/src/Flagrum.Application/Features/EbonySnapsManager/EbonySnapsManager.razor
+++ b/src/Flagrum.Application/Features/EbonySnapsManager/EbonySnapsManager.razor
@@ -158,8 +158,14 @@
                         Note: Options to <strong>Decrypt</strong> and <strong>Encrypt</strong> can be used for exploring and <br/>debugging all save file formats and are not needed for any functions <br/>of this tool.
                     </li>
                     <br/>
-                     <p align="center"> <a href="https://github.com/Kizari/Flagrum/wiki/Managing-Snapshots" style="color: #00A2FF; font-weight: bold;">Link for additional info on using Ebony Snaps Manager</a> </p>
-
+                     <p align="center"> 
+                         <a href="https://github.com/Kizari/Flagrum/wiki/Managing-Snapshots" 
+                            style="color: #00A2FF; font-weight: bold;" 
+                            target="_blank" 
+                            rel="noopener noreferrer">
+                             Link for additional info on using Ebony Snaps Manager
+                         </a> 
+                     </p>
                 </ul>
             </div>
         </BodyView>
