fix: fix crossbow model replacements
Solves an issue where Steam Workshop model replacements targeting crossbows would show up invisible in game.

Also refactors namespaces and primary constructors in Steam Workshop related files.

Resolves: #204

--- a/src/Flagrum.Application/Features/WorkshopMods/Components/WorkshopModCard.razor
+++ b/src/Flagrum.Application/Features/WorkshopMods/Components/WorkshopModCard.razor
@@ -1,4 +1,6 @@
-﻿@inject NavigationManager Navigation
+﻿@using Flagrum.Application.Features.WorkshopMods.Data
+
+@inject NavigationManager Navigation
 @inject AppStateService AppState
 
 <div class="mod-listing-card shadow-lg mx-2.5 mt-6 bg-grey-800 @Opacity transition-opacity transition-transform transition-shadow transform hover:scale-105 cursor-pointer hover:shadow-xl"
