--- a/src/Flagrum.Application/Features/WorkshopMods/Components/WorkshopModCardGroup.razor
+++ b/src/Flagrum.Application/Features/WorkshopMods/Components/WorkshopModCardGroup.razor
@@ -1,4 +1,6 @@
-﻿<CascadingValue Value="this">
+﻿@using Flagrum.Application.Features.WorkshopMods.Data
+
+<CascadingValue Value="this">
     @{
         var counter = 0;
         foreach (var mod in Mods)
