--- a/src/Flagrum.Application/Features/WorkshopMods/Editor/ModelReplacementRow.razor
+++ b/src/Flagrum.Application/Features/WorkshopMods/Editor/ModelReplacementRow.razor
@@ -1,5 +1,7 @@
 ﻿@using Flagrum.Application.Features.WorkshopMods.Data
-@using Flagrum.Application.Persistence.Entities
+@using Flagrum.Application.Features.WorkshopMods.Services
+@using ModelReplacementFavourite = Flagrum.Application.Features.WorkshopMods.Data.ModelReplacementFavourite
+
 @inject NavigationManager Navigation
 @inject IStringLocalizer<ModelReplacementRow> Localizer
 @inject ModelReplacementPresets Presets
