--- a/src/Flagrum.Application/Features/WorkshopMods/Editor/ModelReplacements.razor
+++ b/src/Flagrum.Application/Features/WorkshopMods/Editor/ModelReplacements.razor
@@ -1,6 +1,7 @@
 ﻿@using Flagrum.Application.Features.WorkshopMods.Data
+@using Flagrum.Application.Features.WorkshopMods.Services
+
 @inject ModelReplacementPresets ModelReplacementPresets
-@inject NavigationManager Navigation
 @inject IStringLocalizer<ModelReplacements> L
 @inject IStringLocalizer<WorkshopMods.Index> ParentLocalizer
 
