--- a/src/Flagrum.Application/Features/WorkshopMods/Index.razor
+++ b/src/Flagrum.Application/Features/WorkshopMods/Index.razor
@@ -1,6 +1,7 @@
 ﻿@page "/mod"
 @using Flagrum.Core.Archive.Mod
 @using Flagrum.Application.Features.WorkshopMods.Components
+@using Flagrum.Application.Features.WorkshopMods.Services
 
 @inject AppStateService AppState
 @inject BinmodTypeHelper BinmodTypeHelper
