--- a/src/Flagrum.Application/Features/WorkshopMods/Upload.razor
+++ b/src/Flagrum.Application/Features/WorkshopMods/Upload.razor
@@ -1,6 +1,8 @@
 ﻿@page "/mod/upload"
-@using Flagrum.Application.Features.Shared
+
+@using Flagrum.Application.Features.WorkshopMods.Services
 @using Flagrum.Core.Archive.Mod
+
 @inject SteamWorkshopService SteamWorkshop
 @inject AppStateService AppState
 @inject NavigationManager Navigation
